Chnages to logo

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>FinPal - Upload & Categorize</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <img src="FinPal.png" alt="FinPal Logo" class="logo">
+    <div class="finpal-logo">FinPal</div>
     <div id="upload-section">
       <label for="file-upload" class="upload-box" id="upload-box">
         <input type="file" id="file-upload" accept=".csv" hidden>
